--- a/01_development/RemasterBlaster.html
+++ b/01_development/RemasterBlaster.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-    <script type="text/javascript" src="crafty.js"></script>
     <title>My Crafty Game</title>
     <style>
 	@font-face { font-family: "Amiga"; src: url('amiga4ever.ttf') format("truetype");}
@@ -10,7 +9,8 @@
     </style>
 </head>
 <body>
-	<script src="jquery.min.js"></script>
+	<script type="text/javascript" src="libs/crafty.js"></script>
+	<script src="libs/jquery.min.js"></script>
 	<script src="game.js"></script>
 	<script src="sprites.js"></script>
 	<script src="gui.js"></script>
